deployments/elk/04-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: elasticsearch
    app.kubernetes.io/version: 7.11.1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: elasticsearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elk
        app.kubernetes.io/component: elasticsearch
        app.kubernetes.io/version: 7.11.1
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.11.1
          ports:
            - containerPort: 9300
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/elasticsearch
              name: elk-data
      volumes:
        - name: elk-data
          emptyDir: {}
#          persistentVolumeClaim:
#            claimName: elasticsearch-pvc

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: kibana
    app.kubernetes.io/version: 7.11.1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: kibana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elk
        app.kubernetes.io/component: kibana
        app.kubernetes.io/version: 7.11.1
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.11.1
          ports:
            - containerPort: 5601
              name: web
              protocol: TCP
