deployments/elk/05-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: elasticsearch
    app.kubernetes.io/version: 7.11.1
spec:
  selector:
    app.kubernetes.io/component: elasticsearch
  ports:
    - name: web
      protocol: TCP
      port: 9300
      targetPort: web

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: kibana
    app.kubernetes.io/version: 7.11.1
spec:
  selector:
    app.kubernetes.io/component: kibana
  ports:
    - name: web
      protocol: TCP
      port: 5601
      targetPort: web
